docs: manual dist demo runbook (VN + EN steps) — reconcile E2E test docs, drop stale jDiameter refs